--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "richardregeer/phpunit-coverage-check",
     "description": "Check the code coverage using the clover report of phpunit",
+    "keywords": [
+        "Testing", "PHP", "phpunit", "Unittest", "CI", "Code coverage"],
+    "version": "0.1.0",
     "license": "MIT",
     "authors": [
         {
@@ -8,5 +11,7 @@
             "email": "rich2309@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=5.5.0"
+    }
 }
