--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,15 +8,15 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-version: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0']
+        php-version: ['7.0', '7.1', '7.2', '7.3', '7.4', '8.0']
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup PHP
+      - name: Setup PHP ${{ matrix.php-version }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
 
-        run: composer install --prefer-dist --no-progress --no-suggest
-        run: ./test/run
+      - run: composer install --prefer-dist --no-progress --no-suggest
+      - run: ./test/run
